Fix banner right margin overflow on mobile

--- a/media/css/styles.sass
+++ b/media/css/styles.sass
@@ -30,8 +30,7 @@ body
 #banner
   background: #D1479B
   display: block
-  width: 100%
-  padding: 10px 0 10px 55px
+  padding: 10px 20px 10px 55px
   color: white
   background-position-y: center
   background-position-x: 20px
